ディレクトリ構成の整理
完了した整理作業
１．基本的なドキュメント整備:
LICENSEファイル（MIT）を作成
README.mdを更新（プロジェクト名、作者情報、環境変数の追加）
CONTRIBUTING.mdファイルを作成
CHANGELOG.mdを確認
２．ドキュメントの充実:
docs/usage.md: 詳細な使用方法
docs/development.md: 開発環境のセットアップと開発ガイド
docs/troubleshooting.md: よくある問題と解決方法
docs/github_setup.md: GitHubリポジトリ設定ガイド
３．ディレクトリ構造の整理:
old/specs/: 不要なspecファイルを移動
scripts/: ビルド関連スクリプトをコピー
docs/screenshots/: スクリーンショット用ディレクトリを作成
installer/output/: インストーラ出力用ディレクトリを作成
４．設定ファイルの更新:
.gitignoreを更新（Hugging Faceのキャッシュディレクトリなどを追加）

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,16 @@ translator_main/translator/server_client/__pycache__/
 translator_main/translator/server_client/cache/
 translator_main/translator/server_client/model/
 
+# Hugging Faceモデルキャッシュ
+.cache/
+.huggingface/
+
+# ビルド関連
+Output/
+old/
+*.spec
+!enjapp_fixed.spec
+
 # 仮想環境
 venv/
 ENV/
